fix: update git url

--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://gitlab.ushow.media/guangzhi.zhang/cursor-usage"
   }
 }
