--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 
 variables:
   PNPM_STORE_DIR: "$CI_PROJECT_DIR/.pnpm-store"
+  RELEASE_DESCRIPTION: "Release notes"
 
 cache:
   key: "$CI_COMMIT_REF_SLUG"
@@ -39,24 +40,15 @@ package:
 
 release:
   stage: release
-  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  image: registry.gitlab.com/gitlab-org/cli:latest
   needs:
     - job: package
       artifacts: true
   rules:
     - if: $CI_COMMIT_TAG
   script:
-    - echo "Creating release $CI_COMMIT_TAG"
+    - glab release create "$CI_COMMIT_TAG" --title "$CI_COMMIT_TAG" --description "$RELEASE_DESCRIPTION" --assets-link "name=VSIX Package,url=$CI_PROJECT_URL/-/jobs/$CI_JOB_ID/artifacts/raw/cursor-usage.vsix"
   artifacts:
     paths:
       - cursor-usage.vsix
     expire_in: 1 year
-  release:
-    tag_name: "$CI_COMMIT_TAG"
-    name: "Release $CI_COMMIT_TAG"
-    description: "Automated release for $CI_COMMIT_TAG"
-    assets:
-      links:
-        - name: "VSIX Package"
-          url: "$CI_PROJECT_URL/-/jobs/$CI_JOB_ID/artifacts/raw/cursor-usage.vsix"
-          filepath: "/cursor-usage.vsix"
