--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ release:
   rules:
     - if: $CI_COMMIT_TAG
   script:
-    - glab release create "$CI_COMMIT_TAG" --title "$CI_COMMIT_TAG" --description "$RELEASE_DESCRIPTION" --assets-link "name=VSIX Package,url=$CI_PROJECT_URL/-/jobs/$CI_JOB_ID/artifacts/raw/cursor-usage.vsix"
+    - glab release create "$CI_COMMIT_TAG" --name "$CI_COMMIT_TAG" --notes "$RELEASE_DESCRIPTION" --assets-links "[{\"name\":\"VSIX Package\",\"url\":\"$CI_PROJECT_URL/-/jobs/$CI_JOB_ID/artifacts/raw/cursor-usage.vsix\"}]"
   artifacts:
     paths:
       - cursor-usage.vsix
