--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,8 @@ release:
       artifacts: true
   rules:
     - if: $CI_COMMIT_TAG
+  variables:
+    RELEASE_CLI_DEBUG: "1"
   script:
     - echo "Creating release $CI_COMMIT_TAG"
   artifacts:
