--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "cursor-usage",
   "displayName": "Cursor Usage Monitor",
-  "description": "Monitor your Cursor account billing usage from VS Code.",
+  "description": "Monitor your Cursor account billing usage from Cursor.",
   "version": "0.0.1",
   "publisher": "ZGZ",
   "engines": {
     "vscode": "^1.86.0"
   },
+  "keywords": [
+    "cursor",
+    "usage",
+    "billing",
+    "cost",
+    "token",
+    "spend",
+    "analytics"
+  ],
   "categories": [
     "Other"
   ],
