--- a/package.json
+++ b/package.json
@@ -77,5 +77,6 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.ushow.media/guangzhi.zhang/cursor-usage"
-  }
+  },
+  "license": "MIT"
 }
