--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cursor-usage",
   "displayName": "Cursor Usage Monitor",
-  "description": "Monitor your Cursor account billing usage from Cursor.",
-  "version": "0.0.2",
+  "description": "Monitor your Cursor account billing usage from Cursor Usage Monitor.",
+  "version": "0.0.3",
   "publisher": "ZGZ",
   "engines": {
     "vscode": "^1.86.0"
