--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cursor-usage",
   "displayName": "Cursor Usage Monitor",
   "description": "Monitor your Cursor account billing usage from Cursor Usage Monitor.",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "publisher": "ZGZ",
   "engines": {
     "vscode": "^1.86.0"
@@ -76,7 +76,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.ushow.media/guangzhi.zhang/cursor-usage"
+    "url": "https://github.com/RookieGz/Cursor-Usage-Monitor"
   },
   "license": "MIT"
 }
