--- a/.github/workflows/publish-openvsx.yml
+++ b/.github/workflows/publish-openvsx.yml
@@ -19,7 +19,9 @@ jobs:
           cache: pnpm
 
       - name: Setup pnpm
-        run: corepack enable
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
